hookscan/yul_parser/antlr/YulParser.py
# Generated from hookscan/yul_parser/YulParser.g4 by ANTLR 4.10.1
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class YulParser(Parser):

    grammarFileName = "YulParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'object'",
        "'code'",
        "'data'",
        "'hex'",
        "'function'",
        "'let'",
        "'if'",
        "'switch'",
        "'case'",
        "'default'",
        "'for'",
        "'break'",
        "'continue'",
        "'leave'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "':='",
        "';'",
        "','",
        "':'",
        "'->'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'true'",
        "'false'",
    ]

    symbolicNames = [
        "<INVALID>",
        "OBJECT",
        "CODE",
        "DATA",
        "HEX",
        "FUNCTION",
        "LET",
        "IF",
        "SWITCH",
        "CASE",
        "DEFAULT",
        "FOR",
        "BREAK",
        "CONTINUE",
        "LEAVE",
        "LPAREN",
        "RPAREN",
        "LBRACE",
        "RBRACE",
        "ASSIGN",
        "SEMI",
        "COMMA",
        "COLON",
        "ARROW",
        "IDENTIFIER",
        "STRINGLITERAL",
        "HEXSTRINGLITERAL",
        "TRUELITERAL",
        "FALSELITERAL",
        "HEXNUMBER",
        "DECIMALNUMBER",
        "COMMENT",
        "LINECOMMENT",
        "WS",
    ]

    RULE_prog = 0
    RULE_object = 1
    RULE_code = 2
    RULE_data = 3
    RULE_block = 4
    RULE_statement = 5
    RULE_functionDefinition = 6
    RULE_variableDeclaration = 7
    RULE_assignment = 8
    RULE_expression = 9
    RULE_if = 10
    RULE_switch = 11
    RULE_case = 12
    RULE_default = 13
    RULE_forLoop = 14
    RULE_breakContinue = 15
    RULE_leave = 16
    RULE_functionCall = 17
    RULE_identifier = 18
    RULE_identifierList = 19
    RULE_typeName = 20
    RULE_typedIdentifierList = 21
    RULE_literal = 22
    RULE_numberLiteral = 23
    RULE_stringLiteral = 24
    RULE_hexStringLiteral = 25
    RULE_trueLiteral = 26
    RULE_falseLiteral = 27
    RULE_hexNumber = 28
    RULE_decimalNumber = 29

    ruleNames = [
        "prog",
        "object",
        "code",
        "data",
        "block",
        "statement",
        "functionDefinition",
        "variableDeclaration",
        "assignment",
        "expression",
        "if",
        "switch",
        "case",
        "default",
        "forLoop",
        "breakContinue",
        "leave",
        "functionCall",
        "identifier",
        "identifierList",
        "typeName",
        "typedIdentifierList",
        "literal",
        "numberLiteral",
        "stringLiteral",
        "hexStringLiteral",
        "trueLiteral",
        "falseLiteral",
        "hexNumber",
        "decimalNumber",
    ]

    EOF = Token.EOF
    OBJECT = 1
    CODE = 2
    DATA = 3
    HEX = 4
    FUNCTION = 5
    LET = 6
    IF = 7
    SWITCH = 8
    CASE = 9
    DEFAULT = 10
    FOR = 11
    BREAK = 12
    CONTINUE = 13
    LEAVE = 14
    LPAREN = 15
    RPAREN = 16
    LBRACE = 17
    RBRACE = 18
    ASSIGN = 19
    SEMI = 20
    COMMA = 21
    COLON = 22
    ARROW = 23
    IDENTIFIER = 24
    STRINGLITERAL = 25
    HEXSTRINGLITERAL = 26
    TRUELITERAL = 27
    FALSELITERAL = 28
    HEXNUMBER = 29
    DECIMALNUMBER = 30
    COMMENT = 31
    LINECOMMENT = 32
    WS = 33

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def object_(self):
            return self.getTypedRuleContext(YulParser.ObjectContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_prog

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)

    def prog(self):

        localctx = YulParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.object_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT(self):
            return self.getToken(YulParser.OBJECT, 0)

        def stringLiteral(self):
            return self.getTypedRuleContext(YulParser.StringLiteralContext, 0)

        def LBRACE(self):
            return self.getToken(YulParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YulParser.RBRACE, 0)

        def code(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.CodeContext)
            else:
                return self.getTypedRuleContext(YulParser.CodeContext, i)

        def object_(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.ObjectContext)
            else:
                return self.getTypedRuleContext(YulParser.ObjectContext, i)

        def data(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.DataContext)
            else:
                return self.getTypedRuleContext(YulParser.DataContext, i)

        def getRuleIndex(self):
            return YulParser.RULE_object

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitObject"):
                return visitor.visitObject(self)
            else:
                return visitor.visitChildren(self)

    def object_(self):

        localctx = YulParser.ObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_object)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(YulParser.OBJECT)
            self.state = 63
            self.stringLiteral()
            self.state = 64
            self.match(YulParser.LBRACE)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [YulParser.CODE]:
                    self.state = 65
                    self.code()
                    pass
                elif token in [YulParser.OBJECT]:
                    self.state = 66
                    self.object_()
                    pass
                elif token in [YulParser.DATA]:
                    self.state = 67
                    self.data()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (
                        ((_la) & ~0x3F) == 0
                        and ((1 << _la) & ((1 << YulParser.OBJECT) | (1 << YulParser.CODE) | (1 << YulParser.DATA)))
                        != 0
                    )
                ):
                    break

            self.state = 72
            self.match(YulParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE(self):
            return self.getToken(YulParser.CODE, 0)

        def block(self):
            return self.getTypedRuleContext(YulParser.BlockContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_code

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCode"):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)

    def code(self):

        localctx = YulParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_code)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(YulParser.CODE)
            self.state = 75
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(YulParser.DATA, 0)

        def stringLiteral(self):
            return self.getTypedRuleContext(YulParser.StringLiteralContext, 0)

        def hexStringLiteral(self):
            return self.getTypedRuleContext(YulParser.HexStringLiteralContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_data

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitData"):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)

    def data(self):

        localctx = YulParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(YulParser.DATA)
            self.state = 78
            self.stringLiteral()
            self.state = 79
            self.hexStringLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(YulParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YulParser.RBRACE, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.StatementContext)
            else:
                return self.getTypedRuleContext(YulParser.StatementContext, i)

        def getRuleIndex(self):
            return YulParser.RULE_block

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)

    def block(self):

        localctx = YulParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(YulParser.LBRACE)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << YulParser.OBJECT)
                    | (1 << YulParser.CODE)
                    | (1 << YulParser.DATA)
                    | (1 << YulParser.FUNCTION)
                    | (1 << YulParser.LET)
                    | (1 << YulParser.IF)
                    | (1 << YulParser.SWITCH)
                    | (1 << YulParser.FOR)
                    | (1 << YulParser.BREAK)
                    | (1 << YulParser.CONTINUE)
                    | (1 << YulParser.LEAVE)
                    | (1 << YulParser.LBRACE)
                    | (1 << YulParser.IDENTIFIER)
                    | (1 << YulParser.STRINGLITERAL)
                    | (1 << YulParser.HEXSTRINGLITERAL)
                    | (1 << YulParser.TRUELITERAL)
                    | (1 << YulParser.FALSELITERAL)
                    | (1 << YulParser.HEXNUMBER)
                    | (1 << YulParser.DECIMALNUMBER)
                )
            ) != 0:
                self.state = 82
                self.statement()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(YulParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(YulParser.BlockContext, 0)

        def functionDefinition(self):
            return self.getTypedRuleContext(YulParser.FunctionDefinitionContext, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(YulParser.VariableDeclarationContext, 0)

        def assignment(self):
            return self.getTypedRuleContext(YulParser.AssignmentContext, 0)

        def if_(self):
            return self.getTypedRuleContext(YulParser.IfContext, 0)

        def expression(self):
            return self.getTypedRuleContext(YulParser.ExpressionContext, 0)

        def switch(self):
            return self.getTypedRuleContext(YulParser.SwitchContext, 0)

        def forLoop(self):
            return self.getTypedRuleContext(YulParser.ForLoopContext, 0)

        def breakContinue(self):
            return self.getTypedRuleContext(YulParser.BreakContinueContext, 0)

        def leave(self):
            return self.getTypedRuleContext(YulParser.LeaveContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_statement

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)

    def statement(self):

        localctx = YulParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.functionDefinition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.variableDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.assignment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.if_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.expression()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.switch()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.forLoop()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 98
                self.breakContinue()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.leave()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(YulParser.FUNCTION, 0)

        def identifier(self):
            return self.getTypedRuleContext(YulParser.IdentifierContext, 0)

        def LPAREN(self):
            return self.getToken(YulParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YulParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(YulParser.BlockContext, 0)

        def typedIdentifierList(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.TypedIdentifierListContext)
            else:
                return self.getTypedRuleContext(YulParser.TypedIdentifierListContext, i)

        def COMMA(self):
            return self.getToken(YulParser.COMMA, 0)

        def ARROW(self):
            return self.getToken(YulParser.ARROW, 0)

        def getRuleIndex(self):
            return YulParser.RULE_functionDefinition

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionDefinition"):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)

    def functionDefinition(self):

        localctx = YulParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDefinition)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(YulParser.FUNCTION)
            self.state = 103
            self.identifier()
            self.state = 104
            self.match(YulParser.LPAREN)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << YulParser.OBJECT)
                    | (1 << YulParser.CODE)
                    | (1 << YulParser.DATA)
                    | (1 << YulParser.IDENTIFIER)
                )
            ) != 0:
                self.state = 105
                self.typedIdentifierList()

            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == YulParser.COMMA:
                self.state = 108
                self.match(YulParser.COMMA)

            self.state = 111
            self.match(YulParser.RPAREN)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == YulParser.ARROW:
                self.state = 112
                self.match(YulParser.ARROW)
                self.state = 113
                self.typedIdentifierList()

            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(YulParser.LET, 0)

        def typedIdentifierList(self):
            return self.getTypedRuleContext(YulParser.TypedIdentifierListContext, 0)

        def ASSIGN(self):
            return self.getToken(YulParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(YulParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_variableDeclaration

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariableDeclaration"):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)

    def variableDeclaration(self):

        localctx = YulParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableDeclaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(YulParser.LET)
            self.state = 119
            self.typedIdentifierList()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == YulParser.ASSIGN:
                self.state = 120
                self.match(YulParser.ASSIGN)
                self.state = 121
                self.expression()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(YulParser.IdentifierListContext, 0)

        def ASSIGN(self):
            return self.getToken(YulParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(YulParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_assignment

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)

    def assignment(self):

        localctx = YulParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.identifierList()
            self.state = 125
            self.match(YulParser.ASSIGN)
            self.state = 126
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionCall(self):
            return self.getTypedRuleContext(YulParser.FunctionCallContext, 0)

        def identifier(self):
            return self.getTypedRuleContext(YulParser.IdentifierContext, 0)

        def literal(self):
            return self.getTypedRuleContext(YulParser.LiteralContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_expression

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)

    def expression(self):

        localctx = YulParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.functionCall()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.literal()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(YulParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(YulParser.ExpressionContext, 0)

        def block(self):
            return self.getTypedRuleContext(YulParser.BlockContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_if

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIf"):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)

    def if_(self):

        localctx = YulParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(YulParser.IF)
            self.state = 134
            self.expression()
            self.state = 135
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SwitchContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(YulParser.SWITCH, 0)

        def expression(self):
            return self.getTypedRuleContext(YulParser.ExpressionContext, 0)

        def default(self):
            return self.getTypedRuleContext(YulParser.DefaultContext, 0)

        def case(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.CaseContext)
            else:
                return self.getTypedRuleContext(YulParser.CaseContext, i)

        def getRuleIndex(self):
            return YulParser.RULE_switch

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSwitch"):
                return visitor.visitSwitch(self)
            else:
                return visitor.visitChildren(self)

    def switch(self):

        localctx = YulParser.SwitchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_switch)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(YulParser.SWITCH)
            self.state = 138
            self.expression()
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YulParser.CASE]:
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 139
                    self.case()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == YulParser.CASE):
                        break

                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == YulParser.DEFAULT:
                    self.state = 144
                    self.default()

                pass
            elif token in [YulParser.DEFAULT]:
                self.state = 147
                self.default()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CaseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(YulParser.CASE, 0)

        def literal(self):
            return self.getTypedRuleContext(YulParser.LiteralContext, 0)

        def block(self):
            return self.getTypedRuleContext(YulParser.BlockContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_case

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCase"):
                return visitor.visitCase(self)
            else:
                return visitor.visitChildren(self)

    def case(self):

        localctx = YulParser.CaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_case)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(YulParser.CASE)
            self.state = 151
            self.literal()
            self.state = 152
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefaultContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT(self):
            return self.getToken(YulParser.DEFAULT, 0)

        def block(self):
            return self.getTypedRuleContext(YulParser.BlockContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_default

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDefault"):
                return visitor.visitDefault(self)
            else:
                return visitor.visitChildren(self)

    def default(self):

        localctx = YulParser.DefaultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_default)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(YulParser.DEFAULT)
            self.state = 155
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForLoopContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(YulParser.FOR, 0)

        def block(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.BlockContext)
            else:
                return self.getTypedRuleContext(YulParser.BlockContext, i)

        def expression(self):
            return self.getTypedRuleContext(YulParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return YulParser.RULE_forLoop

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitForLoop"):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)

    def forLoop(self):

        localctx = YulParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(YulParser.FOR)
            self.state = 158
            self.block()
            self.state = 159
            self.expression()
            self.state = 160
            self.block()
            self.state = 161
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BreakContinueContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(YulParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(YulParser.CONTINUE, 0)

        def getRuleIndex(self):
            return YulParser.RULE_breakContinue

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBreakContinue"):
                return visitor.visitBreakContinue(self)
            else:
                return visitor.visitChildren(self)

    def breakContinue(self):

        localctx = YulParser.BreakContinueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_breakContinue)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            _la = self._input.LA(1)
            if not (_la == YulParser.BREAK or _la == YulParser.CONTINUE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LeaveContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEAVE(self):
            return self.getToken(YulParser.LEAVE, 0)

        def getRuleIndex(self):
            return YulParser.RULE_leave

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLeave"):
                return visitor.visitLeave(self)
            else:
                return visitor.visitChildren(self)

    def leave(self):

        localctx = YulParser.LeaveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_leave)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(YulParser.LEAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionCallContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
